--- a/css_basic/styles.css
+++ b/css_basic/styles.css
@@ -1,7 +1,7 @@
 body {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
   margin: 0;
 }
 
@@ -14,9 +14,17 @@ main {
 article {
   flex: 2;
   overflow-y: auto;
+  padding: 20px;
 }
 
 aside {
   flex: 1;
   overflow-y: auto;
+  padding: 20px;
+}
+
+header, footer {
+  background-color: #f4f4f4;
+  padding: 20px;
+  text-align: center;
 }
